--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <!-- red1 -->
             <div class="d-flex mb-1 align-items-center redesDiv">
               <div>
-                <img src="img/linkedin.webp" alt="instagram" class="iconRedes">
+                <img src="img/linkedin.webp" alt="linkedin" class="iconRedes">
               </div>
               <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Damian</h5></a>
             </div>
@@ -266,7 +266,7 @@
             <!-- red2 -->
             <div class="d-flex mb-1 align-items-center redesDiv">
               <div>
-                <img src="img/linkedin.webp" alt="instagram" class="iconRedes">
+                <img src="img/linkedin.webp" alt="linkedin" class="iconRedes">
               </div>
               <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Luis</h5></a>
             </div>
@@ -274,7 +274,7 @@
             <!-- red3 -->
             <div class="d-flex mb-1 align-items-center redesDiv">
               <div>
-                <img src="img/linkedin.webp" alt="instagram" class="iconRedes">
+                <img src="img/linkedin.webp" alt="linkedin" class="iconRedes">
               </div>
               <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Marcos</h5></a>
             </div>
@@ -282,7 +282,7 @@
             <!-- red4 -->
             <div class="d-flex mb-1 align-items-center redesDiv">
               <div>
-                <img src="img/linkedin.webp" alt="instagram" class="iconRedes">
+                <img src="img/linkedin.webp" alt="linkedin" class="iconRedes">
               </div>
               <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Lucas</h5></a>
             </div>
@@ -290,7 +290,7 @@
             <!-- red5 -->
             <div class="d-flex mb-1 align-items-center redesDiv">
               <div>
-                <img src="img/linkedin.webp" alt="instagram" class="iconRedes">
+                <img src="img/linkedin.webp" alt="linkedin" class="iconRedes">
               </div>
               <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Ivan</h5></a>
             </div>
