--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
               <div>
                 <img src="img/linkedin.webp" alt="linkedin" class="iconRedes">
               </div>
-              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Damian</h5></a>
+              <a href="https://www.linkedin.com/in/correa-damian-78936a220" class="link-light text-decoration-none" target="_blank"><h5>@Damian</h5></a>
             </div>
 
             <!-- red2 -->
@@ -268,7 +268,7 @@
               <div>
                 <img src="img/linkedin.webp" alt="linkedin" class="iconRedes">
               </div>
-              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Luis</h5></a>
+              <a href="https://www.linkedin.com/in/luis-fernando-correa-ba11aa27b" class="link-light text-decoration-none" target="_blank"><h5>@Luis</h5></a>
             </div>
 
             <!-- red3 -->
@@ -284,7 +284,7 @@
               <div>
                 <img src="img/linkedin.webp" alt="linkedin" class="iconRedes">
               </div>
-              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Lucas</h5></a>
+              <a href="https://www.linkedin.com/in/lucas-fernandez-5ba043269" class="link-light text-decoration-none" target="_blank"><h5>@Lucas</h5></a>
             </div>
 
             <!-- red5 -->
@@ -292,7 +292,7 @@
               <div>
                 <img src="img/linkedin.webp" alt="linkedin" class="iconRedes">
               </div>
-              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Ivan</h5></a>
+              <a href="https://www.linkedin.com/in/ivan-mena-231989262/" class="link-light text-decoration-none" target="_blank"><h5>@Ivan</h5></a>
             </div>
           </div>
         </div>
