--- a/contacto.html
+++ b/contacto.html
@@ -118,7 +118,7 @@
               <div>
                 <img src="img/linkedin.webp" alt="Linkedin" class="iconRedes me-2">
               </div>
-              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Damian</h5></a>
+              <a href="https://www.linkedin.com/in/correa-damian-78936a220" class="link-light text-decoration-none" target="_blank"><h5>@Damian</h5></a>
             </div>
 
             <!-- red2 -->
@@ -126,7 +126,7 @@
               <div>
                 <img src="img/linkedin.webp" alt="Linkedin" class="iconRedes me-2">
               </div>
-              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Luis</h5></a>
+              <a href="https://www.linkedin.com/in/luis-fernando-correa-ba11aa27b" class="link-light text-decoration-none" target="_blank"><h5>@Luis</h5></a>
             </div>
 
             <!-- red3 -->
@@ -142,7 +142,7 @@
               <div>
                 <img src="img/linkedin.webp" alt="Linkedin" class="iconRedes me-2">
               </div>
-              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Lucas</h5></a>
+              <a href="https://www.linkedin.com/in/lucas-fernandez-5ba043269" class="link-light text-decoration-none" target="_blank"><h5>@Lucas</h5></a>
             </div>
 
             <!-- red5 -->
@@ -150,7 +150,7 @@
               <div>
                 <img src="img/linkedin.webp" alt="Linkedin" class="iconRedes me-2">
               </div>
-              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Ivan</h5></a>
+              <a href="https://www.linkedin.com/in/ivan-mena-231989262/" class="link-light text-decoration-none" target="_blank"><h5>@Ivan</h5></a>
             </div>
           </div>
         </div>
