cambios en el main

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 
         <!-- col1 -->
 
-        <div class="col-sm-10 col-md-6 col-lg-4 d-none d-lg-block">
+        <div class="col-sm-10 col-md-6 col-lg-4 d-none d-lg-block mt-5">
           <div>
             <img src="img/SBN.png" alt="iconoSBN" class="iconoSBN">
           </div>
