Ultimos detalles generales

--- a/acerca-de.html
+++ b/acerca-de.html
@@ -61,7 +61,7 @@
 
   <main>
     <div class="container-fluid py-2">
-      <h1 class=" text-center fw-bold text-light">ROLLING BOYS</h1>
+      <h1 class=" text-center fw-bold text-light mt-3">ROLLING BOYS</h1>
     </div>
     <div class="d-flex container-fluid justify-content-center p-5 row">
       <div class="card tarjets mx-3 col-12 col-md-6 col-lg-2">
@@ -96,7 +96,7 @@
       </div>
     </div>
     <div class="text-center text-dark fw-bold">
-      <p class="sobre-nosotros p-sm-2">Somos un grupo de jóvenes, amantes de la tecnología en busca de un lugar dentro de la industria para el futuro. <br> Actualmente estudiamos en Rolling Code, con mucha ilusión y ganas para poder vivir de lo que más nos gusta.</p>
+      <p class="sobre-nosotros p-sm-2">Somos un grupo de jóvenes, amantes de la tecnología en busca de un lugar dentro de la industria para el futuro. <br> Actualmente estudiamos en Rolling Code, con mucha ilusión y ganas para poder vivir de lo que más nos gusta. <br> ¡Esperamos que les haya gustado nuestro 1er proyecto, muchas gracias!</p>
       <hr>
       <div class="justify-content-center flex-column align-items-center mb-5 d-none d-md-flex">
         <p class="text-light fw-bold"> Para desarrollar éste proyecto usamos:</p>
@@ -131,7 +131,7 @@
   
           <div class="col-sm-10 col-md-6 col-lg-4">
             <div class="py-3 d-flex align-items-center justify-content-center">
-              <h3 class="text-center">Nuestras redes</h3>
+              <h3 class="text-center fw-bold">NUESTRAS REDES</h3>
             </div>
             <div class="d-flex justify-content-around align-items-center flex-column py-1">
   
@@ -181,7 +181,7 @@
   
           <div class="col-sm-10 col-md-6 col-lg-4 d-none d-md-block">
             <div class="py-3">
-              <h3>Mas Info</h3>
+              <h3 class="fw-bold">INFO</h3>
             </div>
             <div class="p-1">
               <p>Blog Deportivo creado para poder mantener informado a los fanaticos del mundo de los deportes. <br> contamos con las ultimas noticias sobre los deportes mas importantes y pasionales del mundo. <br> Futbol, Rugby, Basketball, Automovilismo, Tenis, Etc. <br> Informacion actualizada de las mejores competiciones de todos los deportes </p>
