--- a/contacto.html
+++ b/contacto.html
@@ -109,7 +109,7 @@
 
         <div class="col-sm-10 col-md-6 col-lg-4">
           <div class="py-3 d-flex align-items-center justify-content-center">
-            <h3 class="text-center">Nuestras redes</h3>
+            <h3 class="text-center fw-bold">NUESTRAS REDES</h3>
           </div>
           <div class="d-flex justify-content-around align-items-center flex-column py-1">
 
@@ -159,7 +159,7 @@
 
         <div class="col-sm-10 col-md-6 col-lg-4 d-none d-md-block">
           <div class="py-3">
-            <h3>Mas Info</h3>
+            <h3 class="fw-bold">INFO</h3>
           </div>
           <div class="p-1">
             <p>Blog Deportivo creado para poder mantener informado a los fanáticos del mundo de los deportes. <br> Contamos con las últimas noticias sobre los deportes más importantes y pasionales del mundo. <br> Fútbol, Rugby, Básquetbol, Automovilismo, Tenis, Etc. <br> Información actualizada de las mejores competiciones de todos los deportes.</p>
