--- a/galeria.html
+++ b/galeria.html
@@ -147,7 +147,7 @@
 
         <div class="col-sm-10 col-md-6 col-lg-4">
           <div class="py-3 d-flex align-items-center justify-content-center">
-            <h3 class="text-center">Nuestras redes</h3>
+            <h3 class="text-center fw-bold">NUESTRAS REDES</h3>
           </div>
           <div class="d-flex justify-content-around align-items-center flex-column py-1">
 
@@ -197,7 +197,7 @@
 
         <div class="col-sm-10 col-md-6 col-lg-4 d-none d-md-block">
           <div class="py-3">
-            <h3>Mas Info</h3>
+            <h3 class="fw-bold">INFO</h3>
           </div>
           <div class="p-1">
             <p>Blog Deportivo creado para poder mantener informado a los fanaticos del mundo de los deportes. <br> contamos con las ultimas noticias sobre los deportes mas importantes y pasionales del mundo. <br> Futbol, Rugby, Basketball, Automovilismo, Tenis, Etc. <br> Informacion actualizada de las mejores competiciones de todos los deportes</p>
