--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
               <div>
                 <img src="img/linkedin.webp" alt="linkedin" class="iconRedes">
               </div>
-              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Marcos</h5></a>
+              <a href="https://www.linkedin.com/in/marcos-coronel-18684a123" class="link-light text-decoration-none" target="_blank"><h5>@Marcos</h5></a>
             </div>
 
             <!-- red4 -->
