--- a/galeria.html
+++ b/galeria.html
@@ -172,7 +172,7 @@
               <div>
                 <img src="img/linkedin.webp" alt="Linkedin" class="iconRedes me-2">
               </div>
-              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Marcos</h5></a>
+              <a href="https://www.linkedin.com/in/marcos-coronel-18684a123" class="link-light text-decoration-none" target="_blank"><h5>@Marcos</h5></a>
             </div>
 
             <!-- red4 -->
